oblig2patch/src/tests/oblig2/errors/type5_fail.cmp
program type5_fail
begin

    proc main()
    begin
        var tmp : int
    in 
        tmp := 42;
        tmp.Foox := 42 /* error */
    end
end